[project]
name = "dmash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "box2d-py>=2.3.8",
    "dill>=0.4.0",
    "dm-control==1.0.31",
    "gymnasium[other]>=1.2.0",
    "hopfield-layers",
    "hypnettorch>=0.0.4",
    "matplotlib>=3.10.3",
    "pygame>=2.6.1",
    "pyglet>=2.1.6",
    "rliable>=1.2.0",
    "scikit-learn>=1.7.1",
    "swig>=4.3.1",
    "torch>=2.7.1",
    "tyro>=0.9.26",
    "wandb>=0.21.0",
]

[tool.uv.sources]
hopfield-layers = { git = "https://github.com/ml-jku/hopfield-layers" }

[tool.setuptools]
packages = ["dmash"]

[tool.uv]
package = true
